app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagestream-demo
spec:
  selector:
    app: imagestream-demo
  ports:
    - port: 80
      targetPort: 8080
